@@ -60,39 +60,19 @@ public class SignageService {
     public List<DeviceListDTO> getSignageUser(String accountId){
         List<Device> deviceList = signageRepository.findDevicesByAccountIdAndType(accountId, DeviceType.SIGNAGE);
 
-        Page<Device> deviceList;
-
-        if(searchCategory != null && !searchTerm.isEmpty()){
-            if(searchCategory.equals("deviceName")){
-                deviceList = pcRepository.findDevicesByAccountIdAndDeviceTypeAndDeviceName(accountId, DeviceType.SIGNAGE, searchTerm, pageable);
-            }else {
-                deviceList = pcRepository.findDevicesByAccountIdAndDeviceType(accountId, DeviceType.SIGNAGE, pageable);
-            }
-        }else {
-            deviceList = pcRepository.findDevicesByAccountIdAndDeviceType(accountId, DeviceType.SIGNAGE, pageable);
-        }
-        List<DeviceListDTO> deviceListDTOList = new ArrayList<>();
-
-        for(Device device : deviceList){
+        //해당 디바이스의 정보를 DTO에 담아서 return
+        return deviceList.stream().map(device -> {
+            //계정-디바이스 맵핑 테이블에서 디바이스아이디로 해당 디바이스의 담당자들을 가져옴
             List<AccountDeviceDTO> accountDTOList = accountDeviceMapRepository.findByDeviceId(device.getDeviceId())
                     .stream()
                     .map(map -> {
                         Account account = map.getAccount();
                         return new AccountDeviceDTO(account.getAccountId(), account.getName());
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
-            DeviceListDTO deviceListDTO = DeviceListDTO.builder()
-                    .deviceId(device.getDeviceId())
-                    .accountList(accountDTOList)
-                    .deviceName(device.getDeviceName())
-                    .regDate(device.getRegTime())
-                    .build();
-
-            deviceListDTOList.add(deviceListDTO);
-        }
-
-        return new PageImpl<>(deviceListDTOList, pageable, deviceList.getTotalElements());
+            return new DeviceListDTO(device.getDeviceId(), device.getDeviceName(), accountDTOList, device.getRegTime());
+        }).collect(Collectors.toList());
     }
 
     //모든 재생장치 조회
@@ -100,48 +80,19 @@ public class SignageService {
         //디바이스 목록에서 SIGNAGE만 조회
         List<Device> deviceList = signageRepository.findByDeviceTypeOrderByRegTimeDesc(DeviceType.SIGNAGE);
 
-        Page<Device> deviceList;
-
-        if(searchCategory != null && !searchTerm.isEmpty()){
-            if(searchCategory.equals("deviceName")){
-                deviceList = pcRepository.findByDeviceTypeAndDeviceNameContainingIgnoreCase(DeviceType.SIGNAGE, searchTerm, pageable);
-            }else if(searchCategory.equals("account")){
-                // accountId 또는 name 에서 검색
-                List<AccountDeviceMap> accountDeviceMaps = accountDeviceMapRepository.searchByAccountIdOrName(searchTerm, DeviceType.SIGNAGE);
-
-                List<Long> deviceIds = accountDeviceMaps.stream()
-                        .map(map -> map.getDevice().getDeviceId())
-                        .collect(Collectors.toList());
-
-                deviceList = pcRepository.findByDeviceIdIn(deviceIds, pageable);
-            }else {
-                deviceList = pcRepository.findByDeviceType(DeviceType.SIGNAGE, pageable);
-            }
-        }else {
-            deviceList = pcRepository.findByDeviceType(DeviceType.SIGNAGE, pageable);
-        }
-        List<DeviceListDTO> deviceListDTOList = new ArrayList<>();
-
-        for(Device device : deviceList){
+        //해당 디바이스의 정보를 DTO에 담아서 return
+        return deviceList.stream().map(device -> {
+            //계정-디바이스 맵핑 테이블에서 디바이스아이디로 해당 디바이스의 담당자들을 가져옴
             List<AccountDeviceDTO> accountDTOList = accountDeviceMapRepository.findByDeviceId(device.getDeviceId())
                     .stream()
                     .map(map -> {
                         Account account = map.getAccount();
                         return new AccountDeviceDTO(account.getAccountId(), account.getName());
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
-            DeviceListDTO deviceListDTO = DeviceListDTO.builder()
-                    .deviceId(device.getDeviceId())
-                    .accountList(accountDTOList)
-                    .deviceName(device.getDeviceName())
-                    .regDate(device.getRegTime())
-                    .build();
-
-            deviceListDTOList.add(deviceListDTO);
-        }
-
-        return new PageImpl<>(deviceListDTOList, pageable, deviceList.getTotalElements());
+            return new DeviceListDTO(device.getDeviceId(), device.getDeviceName(), accountDTOList, device.getRegTime());
+        }).collect(Collectors.toList());
     }
 
     //담당자로 등록된 재생장치 목록 조회
@@ -516,10 +467,10 @@ public class SignageService {
 
             //인코딩 resource 목록을 DTO에 담아서 return
             SignageResourceDTO signageResourceDTO = SignageResourceDTO.builder()
-                                                    .encodedResourceId(encodedResource.getEncodedResourceId())
-                                                    .fileTitle(encodedResource.getFileTitle())
-                                                    .thumbFilePath(thumbNail.getFilePath())
-                                                    .build();
+                    .encodedResourceId(encodedResource.getEncodedResourceId())
+                    .fileTitle(encodedResource.getFileTitle())
+                    .thumbFilePath(thumbNail.getFilePath())
+                    .build();
 
             signageResourceDTOList.add(signageResourceDTO);
         }
@@ -546,10 +497,10 @@ public class SignageService {
 
                     //인코딩 resource 목록을 DTO에 담아서 return
                     SignageResourceDTO signageResourceDTO = SignageResourceDTO.builder()
-                                                            .encodedResourceId(encodedResource.getEncodedResourceId())
-                                                            .fileTitle(encodedResource.getFileTitle())
-                                                            .thumbFilePath(thumbNail.getFilePath())
-                                                            .build();
+                            .encodedResourceId(encodedResource.getEncodedResourceId())
+                            .fileTitle(encodedResource.getFileTitle())
+                            .thumbFilePath(thumbNail.getFilePath())
+                            .build();
 
                     signageResourceDTOList.add(signageResourceDTO);
                 }
@@ -657,11 +608,11 @@ public class SignageService {
             EncodedResource encodedResource = encodedResourceRepository.findByEncodedResourceId(playListSequenceDTO.getEncodedResourceId());
 
             PlaylistSequence playlistSequence = PlaylistSequence.builder()
-                                                                .playlistId(playList.getPlaylistId())
-                                                                .playList(playList)
-                                                                .encodedResource(encodedResource)
-                                                                .sequence(playListSequenceDTO.getSequence())
-                                                                .build();
+                    .playlistId(playList.getPlaylistId())
+                    .playList(playList)
+                    .encodedResource(encodedResource)
+                    .sequence(playListSequenceDTO.getSequence())
+                    .build();
 
             playlistSequenceRepository.save(playlistSequence);
         }
@@ -708,10 +659,10 @@ public class SignageService {
             EncodedResource encodedResource = sequence.getEncodedResource();
             ThumbNail thumbNail = thumbNailRepository.findByOriginalResource(encodedResource.getOriginalResource());
             SignageResourceDTO signageResourceDTO = SignageResourceDTO.builder()
-                                                                    .encodedResourceId(encodedResource.getEncodedResourceId())
-                                                                    .fileTitle(encodedResource.getFileTitle())
-                                                                    .thumbFilePath(thumbNail.getFilePath())
-                                                                    .build();
+                    .encodedResourceId(encodedResource.getEncodedResourceId())
+                    .fileTitle(encodedResource.getFileTitle())
+                    .thumbFilePath(thumbNail.getFilePath())
+                    .build();
 
             signageResourceDTOList.add(signageResourceDTO);
         }
@@ -720,10 +671,10 @@ public class SignageService {
 
         //DTO에 담아서 return
         return PlayListUpdateDTO.builder()
-                                .slideTime(playList.getSlideTime())
-                                .fileTitle(playList.getFileTitle())
-                                .SignageResourceDTO(signageResourceDTOList)
-                                .build();
+                .slideTime(playList.getSlideTime())
+                .fileTitle(playList.getFileTitle())
+                .SignageResourceDTO(signageResourceDTOList)
+                .build();
     }
 
     //재생장치 삭제
@@ -778,12 +729,12 @@ public class SignageService {
                 playTime = encodedResource.getPlayTime(); //영상의 경우 영상 재생시간 적용
             }
             PlayDTO playDTO = PlayDTO.builder()
-                                    .playTime(playTime)
-                                    .resourceType(encodedResource.getResourceType())
-                                    .encodedResourceId(encodedResource.getEncodedResourceId())
-                                    .filePath(encodedResource.getFilePath())
-                                    .sequence(playlistSequence.getSequence())
-                                    .build();
+                    .playTime(playTime)
+                    .resourceType(encodedResource.getResourceType())
+                    .encodedResourceId(encodedResource.getEncodedResourceId())
+                    .filePath(encodedResource.getFilePath())
+                    .sequence(playlistSequence.getSequence())
+                    .build();
 
             playDTOList.add(playDTO);
         }
@@ -837,10 +788,10 @@ public class SignageService {
             Device device = accountDeviceMap.getDevice();
 
             SignageStatusDTO signageStatusDTO = SignageStatusDTO.builder()
-                                                                .deviceId(device.getDeviceId())
-                                                                .deviceName(device.getDeviceName())
-                                                                .isConnect(device.getIsConnect())
-                                                                .build();
+                    .deviceId(device.getDeviceId())
+                    .deviceName(device.getDeviceName())
+                    .isConnect(device.getIsConnect())
+                    .build();
 
             signageStatusDTOList.add(signageStatusDTO);
         }
